<resources>
    <string name="app_name">FactsApp</string>

    <string name="hello_world">Hello</string>
    <string name="name">Name</string>
    <string name="say_hi">Say hi</string>
    <string name="error_msg">Name field must be completed</string>

    <string name="lets_go">Let\'s go!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_to_factsapp">Welcome to FactsApp</string>
    <string name="hello">Hello! :)</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="loading">Loading...</string>
    <string name="give_me_another_fact">Give me another fact</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
</resources>